# ParaCL

./: .gitignore  CMakeLists.txt  README.md  dot2png.py  draft.hpp  draft.md  dump.txtr  main.cpp  main_codegen.cpp
.github/workflows/: backend.yml  ci.yml  frontend.yml
ast/: INode.hpp  Node.hpp
build-bring/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  paracl
build-bring/parser/: lexer.cpp  location.hh  parser.cpp  parser.hpp
build-bring/unit_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests
build-main/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  paracl
build-main/parser/: lexer.cpp  location.hh  parser.cpp  parser.hpp
build-main/unit_tests/: CTestTestfile.cmake  Makefile  unit_tests
grammar/: lexer.l  parser.output  parser.tab.c  parser.tab.h  parser.y
include/: ast.hpp  dot_printer.hpp  driver.hpp  dsl.hpp  llvm_printer.hpp  node.hpp  nodeDump.hpp  semantic_analyzer.hpp  semantic_error.hpp  source_location.hpp  tree_traverse.hpp
include/analyze/: tail_call_analyze.hpp
include/detail/: builder.hpp  context.hpp  inode.hpp  ivisitor.hpp  value.hpp  visitor.hpp
paralib/: paraio.cpp  paraio.hpp  value_runtime.cpp  value_runtime.hpp
parser_gen/: lexer.l  lexer.ll  parser.y  parser.yy
readme/: visitor.md
src/: driver.cpp
unit_tests/: CMakeLists.txt
unit_tests/data/common/: bitwise_and_or.ans  bitwise_flags.ans  bitwise_precedence.ans  different_assigns.ans  empty_print.ans
unit_tests/src/: unit_tests.cpp
unit_tests/test_utils/: test_utils.hpp  test_utils_detail.hpp
unit_tests/test_utils /: test_utils.hpp  test_utils_detail.hpp
utils/: log.h  utils.h
